--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -361,8 +361,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h2>Subsection</h2>
 <p>Additional text</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  1.1945650  0.1955227  0.9324414 -1.0081970  0.7056137  0.1227894
-##  [7] -0.1637132  1.3886544 -0.3707833 -0.0172333</code></pre>
+<pre><code>##  [1]  1.01836196  0.81487199 -0.11439376  1.36844772 -0.55766782 -0.28451536
+##  [7] -1.33711545  1.02644068  0.98919709 -0.01491859</code></pre>
 </div>
 <div id="links-to-other-sites" class="section level2">
 <h2>links to other sites</h2>
@@ -374,7 +374,7 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 </div>
 <div id="local-image" class="section level2">
 <h2>Local image</h2>
-<p><img src="images/ted.jpg" /></p>
+<p><img src="images/ted.jpg" style="width:75%"></p>
 </div>
 <div id="link-to-page-within-the-site" class="section level2">
 <h2>link to page within the site</h2>
