--- a/plots.html
+++ b/plots.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My awesome website</title>
+<title>Plots</title>
 
 <script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -353,39 +353,25 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">Plots</h1>
 
 </div>
 
 
-<div id="this-is-ravis-awesome-website" class="section level1">
-<h1>This is Ravi’s awesome website</h1>
-<p>Adding some text here.</p>
-<p><img
-src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
-<div id="subsection" class="section level2">
-<h2>Subsection</h2>
-<p>Additional text</p>
-<pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.0629650  1.1604603  0.8970566  0.7450929 -1.0674038  2.2714574
-##  [7]  0.0206896 -0.8110209 -0.2157193  0.5830228</code></pre>
-</div>
-<div id="links-to-other-sites" class="section level2">
-<h2>links to other sites</h2>
-<p>Link to useful tools for data science</p>
-<ul>
-<li><a href="https://www.google.com">google</a></li>
-<li><a href="https://p8105.com">P8105</a></li>
-</ul>
-</div>
-<div id="local-image" class="section level2">
-<h2>Local image</h2>
-<p><img src="images/ted.jpg" style="width:75%"></p>
-</div>
-<div id="link-to-page-within-the-site" class="section level2">
-<h2>link to page within the site</h2>
-<p><a href="about.html">About me</a></p>
-</div>
+<div id="here-are-some-plots" class="section level1">
+<h1>Here are some plots</h1>
+<p>You can make plots in the same way as always.</p>
+<pre class="r"><code>library(tidyverse)
+
+df = tibble(
+  x = rnorm(100, 2, 5),
+  y = 1 + 2 * x - .5 * x ^ 2 + rnorm(100)
+)
+
+df |&gt; 
+  ggplot(aes(x = x, y = y)) + 
+  geom_point()</code></pre>
+<p><img src="plots_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
 </div>
 
 
