creating a dashboard and adding to yaml

--- a/index.html
+++ b/index.html
@@ -333,6 +333,9 @@ div.tocify {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;you@youremail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -367,8 +370,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h2>Subsection</h2>
 <p>Additional text</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.0629650  1.1604603  0.8970566  0.7450929 -1.0674038  2.2714574
-##  [7]  0.0206896 -0.8110209 -0.2157193  0.5830228</code></pre>
+<pre><code>##  [1]  1.02991726  0.10006994 -0.72301330 -0.39125056  0.33757456  0.17382720
+##  [7]  0.60524729  0.68980974  0.92915690 -0.01425608</code></pre>
 </div>
 <div id="links-to-other-sites" class="section level2">
 <h2>links to other sites</h2>
